--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,6 @@
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.15",
         "friendsofsymfony/rest-bundle": "^3.5",
-        "lexik/jwt-authentication-bundle": "^2.19",
         "nelmio/cors-bundle": "^2.3",
         "stof/doctrine-extensions-bundle": "^1.8",
         "symfony/console": "6.3.*",
@@ -20,11 +19,9 @@
         "symfony/expression-language": "6.3.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "6.3.*",
-        "symfony/mailer": "6.3.*",
+        "symfony/http-client": "6.3.*",
         "symfony/monolog-bundle": "^3.8",
-        "symfony/panther": "^2.1",
         "symfony/runtime": "6.3.*",
-        "symfony/security-bundle": "6.3.*",
         "symfony/serializer": "6.3.*",
         "symfony/validator": "6.3.*",
         "symfony/yaml": "6.3.*"
